# cmdline_menu

./: CMakeLists.txt  README.MD
lib/: CMakeLists.txt
lib/include/: cmdline_api.h  command.h  menu.h  menustack.h
lib/src/: command.cpp  menu.cpp  menustack.cpp
testapp/: CMakeLists.txt
testapp/include/: playerstats_command.h
testapp/src/: main.cpp
